# optlib

./: CMakeLists.txt  README.md
include/: constrained_optimization.hpp  nonconstrained_optimization.hpp
include/core/: base_unconstrained_optimization.hpp  gauss_seidl_algorithm.hpp  gradient_descent_algorithm.hpp  linesearch.hpp  newton_rapson_algorithm.hpp
include/io/: optimization_output.hpp  optimization_type.hpp  optimized_function.hpp
tests/: CMakeLists.txt  linesearch_test.cpp  unconstrained_test.cpp
